--- a/index.html
+++ b/index.html
@@ -1,11 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>santiago</title>
+  <meta charset="UTF-8">
+  <title>Ejemplo de Menú y Tabla</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+    nav {
+      background-color: #333;
+      padding: 10px;
+    }
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin: 0 15px;
+      font-weight: bold;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    .container {
+      padding: 20px;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
+    }
+    th, td {
+      border: 1px solid #999;
+      padding: 10px;
+      text-align: left;
+    }
+    th {
+      background-color: #f4f4f4;
+    }
+  </style>
 </head>
 <body>
-    <h1>trabajoso</h1>
+
+  <nav>
+    <a href="#">Inicio</a>
+    <a href="#">Productos</a>
+    <a href="#">Servicios</a>
+    <a href="#">Contacto</a>
+  </nav>
+
+  <div class="container">
+    <h1>Tabla de Ejemplo</h1>
+    <table>
+      <thead>
+        <tr>
+          <th>Nombre</th>
+          <th>Edad</th>
+          <th>Ciudad</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Juan Pérez</td>
+          <td>30</td>
+          <td>Madrid</td>
+        </tr>
+        <tr>
+          <td>Lucía Gómez</td>
+          <td>25</td>
+          <td>Barcelona</td>
+        </tr>
+        <tr>
+          <td>Carlos Sánchez</td>
+          <td>40</td>
+          <td>Valencia</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
 </body>
 </html>
