--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
       </thead>
       <tbody>
         <tr>
-          <td>Juan Pérez</td>
-          <td>30</td>
-          <td>Madrid</td>
+          <td>santiago s</td>
+          <td>19</td>
+          <td>popayan</td>
         </tr>
         <tr>
-          <td>Lucía Gómez</td>
-          <td>25</td>
-          <td>Barcelona</td>
+          <td>andres a</td>
+          <td>18</td>
+          <td>popayan </td>
         </tr>
         <tr>
-          <td>Carlos Sánchez</td>
-          <td>40</td>
-          <td>Valencia</td>
+          <td>volveras </td>
+          <td>17</td>
+          <td>choco</td>
         </tr>
       </tbody>
     </table>
