--- a/contacto.html
+++ b/contacto.html
@@ -57,18 +57,18 @@
 <body>
 
   <div class="container">
-    <h1>Formulario de Contacto</h1>
+    <h1>examen practico </h1>
     <form action="#" method="post">
-      <label for="nombre">Nombre:</label>
+      <label for="nombre">Name:</label>
       <input type="text" id="nombre" name="nombre" required>
 
-      <label for="email">Correo electrónico:</label>
+      <label for="email">gmail:</label>
       <input type="email" id="email" name="email" required>
 
-      <label for="asunto">Asunto:</label>
+      <label for="asunto">necesuidad:</label>
       <input type="text" id="asunto" name="asunto">
 
-      <label for="mensaje">Mensaje:</label>
+      <label for="mensaje">discurso:</label>
       <textarea id="mensaje" name="mensaje" required></textarea>
 
       <input type="submit" value="Enviar">
