--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </nav>
 
   <div class="container">
-    <h1>Tabla de Ejemplo</h1>
+    <h1>Tabla de estudiantes del sena</h1>
     <table>
       <thead>
         <tr>
